--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Кафедра 311</title>
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="/style.css" />
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
     </style>
@@ -20,7 +20,7 @@
         <a href="/" class="header-logo">
           <img
             class="header-logo-image"
-            src="./images/logo.png"
+            src="/images/logo.png"
             alt="МАИ"
             width="40"
             height="40"
@@ -47,7 +47,7 @@
           <dotlottie-player
             class="lang-logo"
             class="flex-logo-image"
-            src="./icon-json/lang.json"
+            src="/icon-json/lang.json"
             background="transparent"
             speed="1"
             style="width: 23px; height: 23px"
@@ -60,7 +60,7 @@
       <div class="content-first">
         <h1 class="custom-font">Планируешь Стать</h1>
         <p class="dynamic-text"><span class="typed"></span></p>
-        <script src="./scripts/script_1.js"></script>
+        <script src="/scripts/script_1.js"></script>
         <p class="dop-info">Кафедра 311 станет твоим гидом в новом мире</p>
         <p class="dop-info">информационных технологий.</p>
       </div>
@@ -72,7 +72,7 @@
           <div class="flex-element parent-element">
             <dotlottie-player
               class="flex-logo-image"
-              src="./icon-json/advantage_1.json"
+              src="/icon-json/advantage_1.json"
               background="transparent"
               speed="1"
               style="width: 50px; height: 70px"
@@ -85,7 +85,7 @@
           <div class="flex-element parent-element">
             <dotlottie-player
               class="flex-logo-image"
-              src="./icon-json/advantage_2.json"
+              src="/icon-json/advantage_2.json"
               background="transparent"
               speed="1"
               style="width: 70px; height: 69px"
@@ -100,7 +100,7 @@
           <div class="flex-element parent-element">
             <dotlottie-player
               class="flex-logo-image"
-              src="./icon-json/advantage_3.json"
+              src="/icon-json/advantage_3.json"
               background="transparent"
               speed="1.3"
               style="width: 80px; height: 67px"
@@ -113,7 +113,7 @@
           <div class="flex-element parent-element bottom-second">
             <dotlottie-player
               class="flex-logo-image-bottom"
-              src="./icon-json/advantage_4.json"
+              src="/icon-json/advantage_4.json"
               background="transparent"
               speed="1"
               style="width: 50px; height: 48px"
@@ -126,7 +126,7 @@
           <div class="flex-element parent-element bottom-second">
             <dotlottie-player
               class="flex-logo-image-bottom"
-              src="./icon-json/advantage_5.json"
+              src="/icon-json/advantage_5.json"
               background="transparent"
               speed="1"
               style="width: 55px; height: 44px"
@@ -223,10 +223,10 @@
     </div>
     <p class="title-partner">Наши партнёры</p>
     <div class="partner-container">
-        <img src="./images/RosCosmos.png" alt="РосКосмос">
-        <img src="./images/OAK.png" alt="ОАК">
-        <img src="./images/CNIIMASH.png" alt="ЦНИИМАШ">
-        <img src="./images/ALMAZ.png" alt="НПО АЛМАЗ">
+        <img src="/images/RosCosmos.png" alt="РосКосмос">
+        <img src="/images/OAK.png" alt="ОАК">
+        <img src="/images/CNIIMASH.png" alt="ЦНИИМАШ">
+        <img src="/images/ALMAZ.png" alt="НПО АЛМАЗ">
     </div>
 
     <center><div class="create-line">
@@ -234,23 +234,23 @@
 
     <div class="contact-container_big">
         <div class="contact-container_smal">
-            <img src="./images/vk.png" alt="Вконтакте" >
+            <img src="/images/vk.png" alt="Вконтакте" >
             <p class="text-contact">ссылка</p>
         </div>
       
         <div class="contact-container_smal">
-            <img src="./images/at.png" alt="Собака">
+            <img src="/images/at.png" alt="Собака">
             <a href="mailto:kaf311@yandex.ru" class="text-contact">kaf311@yandex.ru</a>
         </div>
       
         <div class="contact-container_smal">
-            <img src="./images/phone-call.png" alt="Картинка 3">
+            <img src="/images/phone-call.png" alt="Картинка 3">
             <a href="tel:"+74951584647" class="text-contact">+7(495)158-46-47</a>
         </div>
     </div>
 
-    <script type="text/javascript" src="./scripts/scroll.js"></script>
-    <script type="text/javascript" src="./scripts/animation.js"></script>
-    <script type="text/javascript" src="./scripts/script_2.js"></script>
+    <script type="text/javascript" src="/scripts/scroll.js"></script>
+    <script type="text/javascript" src="/scripts/animation.js"></script>
+    <script type="text/javascript" src="/scripts/script_2.js"></script>
   </body>
 </html>
