--- a/main/index.html
+++ b/main/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Кафедра 311</title>
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="/main.css" />
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
     </style>
@@ -223,10 +223,10 @@
     </div>
     <p class="title-partner">Наши партнёры</p>
     <div class="partner-container">
-        <img src="/images/RosCosmos.png" alt="РосКосмос">
-        <img src="/images/OAK.png" alt="ОАК">
-        <img src="/images/CNIIMASH.png" alt="ЦНИИМАШ">
-        <img src="/images/ALMAZ.png" alt="НПО АЛМАЗ">
+        <img src="/images/partners/RosCosmos.png" alt="РосКосмос">
+        <img src="/images/partners/OAK.png" alt="ОАК">
+        <img src="/images/partners/CNIIMASH.png" alt="ЦНИИМАШ">
+        <img src="/images/partners/ALMAZ.png" alt="НПО АЛМАЗ">
     </div>
 
     <center><div class="create-line">
@@ -234,17 +234,17 @@
 
     <div class="contact-container_big">
         <div class="contact-container_smal">
-            <img src="/images/vk.png" alt="Вконтакте" >
+            <img src="/images/icons/vk.png" alt="Вконтакте" >
             <p class="text-contact">ссылка</p>
         </div>
       
         <div class="contact-container_smal">
-            <img src="/images/at.png" alt="Собака">
+            <img src="/images/icons/at.png" alt="Собака">
             <a href="mailto:kaf311@yandex.ru" class="text-contact">kaf311@yandex.ru</a>
         </div>
       
         <div class="contact-container_smal">
-            <img src="/images/phone-call.png" alt="Картинка 3">
+            <img src="/images/icons/phone-call.png" alt="Картинка 3">
             <a href="tel:"+74951584647" class="text-contact">+7(495)158-46-47</a>
         </div>
     </div>
