--- a/main/index.html
+++ b/main/index.html
@@ -30,7 +30,7 @@
         <nav class="header-menu">
           <ul class="header-menu-list">
             <li class="header-menu-item">
-              <a href="/" class="header-menu-link">Главная</a>
+              <a href="#" class="header-menu-link">Главная</a>
             </li>
             <li class="header-menu-item">
               <a href="/teachers" class="header-menu-link">Преподаватели</a>
@@ -39,7 +39,7 @@
               <a href="/disciplines" class="header-menu-link">Дисциплины</a>
             </li>
             <li class="header-menu-item">
-              <a href="/literature" class="header-menu-link">Материалы</a>
+              <a href="/materials" class="header-menu-link">Материалы</a>
             </li>
           </ul>
         </nav>
