--- a/materials/index.html
+++ b/materials/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Материалы</title>
     <link rel="stylesheet" href="/materials.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+    </style>
 </head>
 <body>
     <header class="header">
@@ -37,6 +40,7 @@
         <div class="lang-contant parent-element">
         </div>
     </header>
+    <p class="title-partner">Материалы</p>
     <div class="main_content">
         <div class="element">
             <div class="image_box">
