--- a/materials/index.html
+++ b/materials/index.html
@@ -33,7 +33,7 @@
                 <a href="/disciplines" class="header-menu-link">Дисциплины</a>
             </li>
             <li class="header-menu-item">
-                <a href="/#" class="header-menu-link">Материалы</a>
+                <a href="#" class="header-menu-link">Материалы</a>
             </li>
             </ul>
         </nav>
