--- a/main_node/index.html
+++ b/main_node/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Кафедра 311</title>
-    <link rel="stylesheet" href="/main.css" />
+    <link rel="stylesheet" href="./main.css" />
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
     </style>
@@ -63,7 +63,7 @@
               src="/icon-json/advantage_1.json"
               background="transparent"
               speed="1"
-              style="width: 50px; height: 70px"
+              style="width: 3.5vw; height: 4.85vw"
               direction="1"
               playMode="normal"
             ></dotlottie-player>
@@ -76,7 +76,7 @@
               src="/icon-json/advantage_2.json"
               background="transparent"
               speed="1"
-              style="width: 70px; height: 69px"
+              style="width: 4.85vw; height: 4.8vw"
               direction="1"
               playMode="normal"
             ></dotlottie-player>
@@ -91,33 +91,33 @@
               src="/icon-json/advantage_3.json"
               background="transparent"
               speed="1.3"
-              style="width: 80px; height: 67px"
+              style="width: 5.55vw; height: 4.65vw"
               direction="1"
               playMode="normal"
             ></dotlottie-player>
             <p class="flex-title">Преподаватели</p>
             <p class="flex-info">Преподавательский состав высокого уровня.</p>
           </div>
-          <div class="flex-element parent-element bottom-second">
+          <div class="flex-element parent-element">
             <dotlottie-player
               class="flex-logo-image-bottom"
               src="/icon-json/advantage_4.json"
               background="transparent"
               speed="1"
-              style="width: 50px; height: 48px"
+              style="width: 3.5vw; height: 3.3vw"
               direction="1"
               playMode="normal"
             ></dotlottie-player>
             <p class="flex-title">Военная кафедра</p>
             <p class="flex-info">Сможете получить звание лейтенанта запаса.</p>
           </div>
-          <div class="flex-element parent-element bottom-second">
+          <div class="flex-element parent-element">
             <dotlottie-player
               class="flex-logo-image-bottom"
               src="/icon-json/advantage_5.json"
               background="transparent"
               speed="1"
-              style="width: 55px; height: 44px"
+              style="width: 3.8vw; height: 3.05vw"
               direction="1"
               playMode="normal"
             ></dotlottie-player>
