--- a/main/index.html
+++ b/main/index.html
@@ -19,7 +19,7 @@
       <a href="/" class="header-logo">
         <img
           class="header-logo-image"
-          src="./images/logo.png"
+          src="/images/logo.png"
           alt="МАИ"
           width="40"
           height="40"
@@ -36,7 +36,7 @@
         <dotlottie-player
           class="lang-logo"
           class="flex-logo-image"
-          src="./icon-json/lang.json"
+          src="/icon-json/lang.json"
           background="transparent"
           speed="1"
           style="width: 23px; height: 23px"
