--- a/main/index.html
+++ b/main/index.html
@@ -63,7 +63,7 @@
               src="/icon-json/advantage_1.json"
               background="transparent"
               speed="1"
-              style="width: 50px; height: 70px"
+              style="width: 3.5vw; height: 4.85vw"
               direction="1"
               playMode="normal"
             ></dotlottie-player>
@@ -76,7 +76,7 @@
               src="/icon-json/advantage_2.json"
               background="transparent"
               speed="1"
-              style="width: 70px; height: 69px"
+              style="width: 4.85vw; height: 4.8vw"
               direction="1"
               playMode="normal"
             ></dotlottie-player>
@@ -91,33 +91,33 @@
               src="/icon-json/advantage_3.json"
               background="transparent"
               speed="1.3"
-              style="width: 80px; height: 67px"
+              style="width: 5.55vw; height: 4.65vw"
               direction="1"
               playMode="normal"
             ></dotlottie-player>
             <p class="flex-title">Преподаватели</p>
             <p class="flex-info">Преподавательский состав высокого уровня.</p>
           </div>
-          <div class="flex-element parent-element bottom-second">
+          <div class="flex-element parent-element">
             <dotlottie-player
               class="flex-logo-image-bottom"
               src="/icon-json/advantage_4.json"
               background="transparent"
               speed="1"
-              style="width: 50px; height: 48px"
+              style="width: 3.5vw; height: 3.3vw"
               direction="1"
               playMode="normal"
             ></dotlottie-player>
             <p class="flex-title">Военная кафедра</p>
             <p class="flex-info">Сможете получить звание лейтенанта запаса.</p>
           </div>
-          <div class="flex-element parent-element bottom-second">
+          <div class="flex-element parent-element">
             <dotlottie-player
               class="flex-logo-image-bottom"
               src="/icon-json/advantage_5.json"
               background="transparent"
               speed="1"
-              style="width: 55px; height: 44px"
+              style="width: 3.8vw; height: 3.05vw"
               direction="1"
               playMode="normal"
             ></dotlottie-player>
@@ -125,51 +125,6 @@
             <p class="flex-info">
               Учебный план отвечает современным требованиям индустрии.
             </p>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="content_section content_section__course">
-      <h1>Направление подготовки</h1>
-      <div class="course_block">
-        <div class="course_block__left_side">
-          <div class="course_block__course_number">09.03.03</div>
-          <div class="left_side__text_block">
-            <h2>Прикладная информатика в технических системах</h2>
-            <ul>
-              <li>Количество бюджетных мест: <b>45</b></li>
-              <li>Количество платных мест: <b>15</b></li>
-              <li>Проходной балл на платное: <b>218</b></li>
-              <li>Предметы: <b>М И/Ф Р</b></li>
-            </ul>
-          </div>
-        </div>
-        <div
-          class="course_block__right_side course_block__right_side-animation"
-        >
-          <div class="right_side__text_block">
-            <h2>Проходные баллы</h2>
-            <p>(бюджет)</p>
-          </div>
-          <div class="right_side__graph">
-            <div class="graph__column">
-              <div class="graph__column___box graph__column___animation260">
-                260
-              </div>
-              <p>2021</p>
-            </div>
-            <div class="graph__column">
-              <div class="graph__column___box graph__column___animation244">
-                244
-              </div>
-              <p>2022</p>
-            </div>
-            <div class="graph__column">
-              <div class="graph__column___box graph__column___animation251">
-                251
-              </div>
-              <p>2023</p>
-            </div>
           </div>
         </div>
       </div>
