--- a/main/index.html
+++ b/main/index.html
@@ -129,6 +129,51 @@
         </div>
       </div>
     </div>
+    <div class="content_section content_section__course">
+      <h1>Направление подготовки</h1>
+      <div class="course_block">
+        <div class="course_block__left_side">
+          <div class="course_block__course_number">09.03.03</div>
+          <div class="left_side__text_block">
+            <h2>Прикладная информатика в технических системах</h2>
+            <ul>
+              <li>Количество бюджетных мест: <b>45</b></li>
+              <li>Количество платных мест: <b>15</b></li>
+              <li>Проходной балл на платное: <b>218</b></li>
+              <li>Предметы: <b>М И/Ф Р</b></li>
+            </ul>
+          </div>
+        </div>
+        <div
+          class="course_block__right_side course_block__right_side-animation"
+        >
+          <div class="right_side__text_block">
+            <h2>Проходные баллы</h2>
+            <p>(бюджет)</p>
+          </div>
+          <div class="right_side__graph">
+            <div class="graph__column">
+              <div class="graph__column___box graph__column___animation260">
+                260
+              </div>
+              <p>2021</p>
+            </div>
+            <div class="graph__column">
+              <div class="graph__column___box graph__column___animation244">
+                244
+              </div>
+              <p>2022</p>
+            </div>
+            <div class="graph__column">
+              <div class="graph__column___box graph__column___animation251">
+                251
+              </div>
+              <p>2023</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     <div class="black-container">
       <p class="prof-header">Будующая профессия</p>
       <div class="prof-containers" id="VerticalContainers">
