--- a/materials/index.html
+++ b/materials/index.html
@@ -12,34 +12,35 @@
 <body>
     <header class="header">
         <a href="/" class="header-logo">
-            <img
+          <img
             class="header-logo-image"
             src="/images/logo.png"
             alt="МАИ"
             width="40"
             height="40"
             loading="lazy"
-            />
+          />
         </a>
         <nav class="header-menu">
-            <ul class="header-menu-list">
-            <li class="header-menu-item">
-                <a href="/" class="header-menu-link">Главная</a>
-            </li>
-            <li class="header-menu-item">
-                <a href="/teachers" class="header-menu-link">Преподаватели</a>
-            </li>
-            <li class="header-menu-item">
-                <a href="/disciplines" class="header-menu-link">Дисциплины</a>
-            </li>
-            <li class="header-menu-item">
-                <a href="#" class="header-menu-link">Материалы</a>
-            </li>
-            </ul>
+          <a href="/" class="header-menu-link">Главная</a>
+          <a href="/teachers" class="header-menu-link">Преподаватели</a>
+          <a href="/disciplines" class="header-menu-link">Дисциплины</a>
+          <a href="/literature" class="header-menu-link">Литература</a>
         </nav>
         <div class="lang-contant parent-element">
+          <dotlottie-player
+            class="lang-logo"
+            class="flex-logo-image"
+            src="/icon-json/lang.json"
+            background="transparent"
+            speed="1"
+            style="width: 23px; height: 23px"
+            direction="1"
+            playMode="normal"
+          ></dotlottie-player>
+          <div class="lang-title">Eng</div>
         </div>
-    </header>
+      </header>
     <p class="title-partner">Материалы</p>
     <div class="main_content">
         <div class="element">
