--- a/teachers/index.html
+++ b/teachers/index.html
@@ -7,7 +7,37 @@
     <link rel="stylesheet" href="/teachers.css">
 </head>
 <body>
-
+    <header class="header">
+        <a href="/" class="header-logo">
+          <img
+            class="header-logo-image"
+            src="/images/logo.png"
+            alt="МАИ"
+            width="40"
+            height="40"
+            loading="lazy"
+          />
+        </a>
+        <nav class="header-menu">
+          <a href="/" class="header-menu-link">Главная</a>
+          <a href="/teachers" class="header-menu-link">Преподаватели</a>
+          <a href="/disciplines" class="header-menu-link">Дисциплины</a>
+          <a href="/literature" class="header-menu-link">Литература</a>
+        </nav>
+        <div class="lang-contant parent-element">
+          <dotlottie-player
+            class="lang-logo"
+            class="flex-logo-image"
+            src="/icon-json/lang.json"
+            background="transparent"
+            speed="1"
+            style="width: 23px; height: 23px"
+            direction="1"
+            playMode="normal"
+          ></dotlottie-player>
+          <div class="lang-title">Eng</div>
+        </div>
+    </header>
     <div class="main_container">
         <div class="container_teacher">
             <div class="photos_teachers">
