--- a/disciplines/index.html
+++ b/disciplines/index.html
@@ -24,8 +24,8 @@
     <nav class="header-menu">
       <a href="/" class="header-menu-link">Главная</a>
       <a href="/teachers" class="header-menu-link">Преподаватели</a>
-      <a href="/disciplines" class="header-menu-link">Дисциплины</a>
-      <a href="/literature" class="header-menu-link">Литература</a>
+      <a href="#" class="header-menu-link">Дисциплины</a>
+      <a href="/materials" class="header-menu-link">Материалы</a>
     </nav>
     <div class="lang-contant parent-element">
       <dotlottie-player
