--- a/main/index.html
+++ b/main/index.html
@@ -8,9 +8,9 @@
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
     </style>
-    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
+    <script src="/scripts/typed.js"></script>
     <script
-      src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs"
+      src="/scripts/dotlottie-player.mjs"
       type="module"
     ></script>
   </head>
