--- a/main/index.html
+++ b/main/index.html
@@ -10,7 +10,7 @@
     </style>
     <script src="/scripts/typed.js"></script>
     <script
-      src="/scripts/dotlottie-player.mjs"
+      src="/node_modules/@dotlottie/player-component/dist/dotlottie-player.mjs"
       type="module"
     ></script>
   </head>
