--- a/main/index.html
+++ b/main/index.html
@@ -8,7 +8,7 @@
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
     </style>
-    <script src="/scripts/typed.js"></script>
+    <script src="/scripts/typed.min.js"></script>
     <script
       src="/node_modules/@dotlottie/player-component/dist/dotlottie-player.mjs"
       type="module"
