--- a/main/index.html
+++ b/main/index.html
@@ -49,7 +49,7 @@
     <div class="content-first">
       <h1 class="custom-font">Планируешь Стать</h1>
       <p class="dynamic-text"><span class="typed"></span></p>
-      <script src="/scripts/script_1.js"></script>
+      <script src="/scripts/typing_script.js"></script>
       <p class="dop-info">Кафедра 311 станет твоим гидом в новом мире</p>
       <p class="dop-info">информационных технологий.</p>
     </div>
@@ -239,6 +239,6 @@
 
     <script type="text/javascript" src="/scripts/scroll.js"></script>
     <script type="text/javascript" src="/scripts/animation.js"></script>
-    <script type="text/javascript" src="/scripts/script_2.js"></script>
+    <script type="text/javascript" src="/scripts/buttons_scripts.js"></script>
   </body>
 </html>
