--- a/main/index.html
+++ b/main/index.html
@@ -211,10 +211,12 @@
     </div>
     <p class="title-partner">Наши партнёры</p>
     <div class="partner-container">
-        <img src="/images/partners/RosCosmos.png" alt="РосКосмос">
-        <img src="/images/partners/OAK.png" alt="ОАК">
-        <img src="/images/partners/CNIIMASH.png" alt="ЦНИИМАШ">
-        <img src="/images/partners/ALMAZ.png" alt="НПО АЛМАЗ">
+      <center>
+        <a href="" class="partner_button"><img src="/images/partners/RosCosmos.png" alt="РосКосмос"></a>
+        <a href="" class="partner_button"></a><img src="/images/partners/OAK.png" alt="ОАК"></a>
+        <a href="" class="partner_button"></a><img src="/images/partners/CNIIMASH.png" alt="ЦНИИМАШ"></a>
+        <a href="" class="partner_button"></a><img src="/images/partners/ALMAZ.png" alt="НПО АЛМАЗ"></a>
+      </center>
     </div>
 
     <center><div class="create-line">
