--- a/main/index.html
+++ b/main/index.html
@@ -212,10 +212,10 @@
     <p class="title-partner">Наши партнёры</p>
     <div class="partner-container">
       <center>
-        <a href="" class="partner_button"><img src="/images/partners/RosCosmos.png" alt="РосКосмос"></a>
-        <a href="" class="partner_button"></a><img src="/images/partners/OAK.png" alt="ОАК"></a>
-        <a href="" class="partner_button"></a><img src="/images/partners/CNIIMASH.png" alt="ЦНИИМАШ"></a>
-        <a href="" class="partner_button"></a><img src="/images/partners/ALMAZ.png" alt="НПО АЛМАЗ"></a>
+        <a href="" class="partner_button" target="_blank"><img src="/images/partners/RosCosmos.png" alt="РосКосмос"></a>
+        <a href="" class="partner_button" target="_blank"></a><img src="/images/partners/OAK.png" alt="ОАК"></a>
+        <a href="" class="partner_button" target="_blank"></a><img src="/images/partners/CNIIMASH.png" alt="ЦНИИМАШ"></a>
+        <a href="" class="partner_button" target="_blank"></a><img src="/images/partners/ALMAZ.png" alt="НПО АЛМАЗ"></a>
       </center>
     </div>
 
