--- a/main/index.html
+++ b/main/index.html
@@ -200,10 +200,10 @@
     </div>
     <p class="title-partner">Наши партнёры</p>
     <div class="partner-container">
-      <a href="" class="partner_button"><img src="/images/partners/RosCosmos.png" alt="РосКосмос"></a>
-      <a href="" class="partner_button"><img src="/images/partners/OAK.png" alt="ОАК"></a>
-      <a href="" class="partner_button"><img src="/images/partners/CNIIMASH.png" alt="ЦНИИМАШ"></a>
-      <a href="" class="partner_button"><img src="/images/partners/ALMAZ.png" alt="НПО АЛМАЗ"></a>
+      <a href="https://www.roscosmos.ru" class="partner_button"><img src="/images/partners/RosCosmos.png" alt="РосКосмос"></a>
+      <a href="https://www.uacrussia.ru/ru/" class="partner_button"><img src="/images/partners/OAK.png" alt="ОАК"></a>
+      <a href="https://tsniimash.ru" class="partner_button"><img src="/images/partners/CNIIMASH.png" alt="ЦНИИМАШ"></a>
+      <a href="https://raspletin.com" class="partner_button"><img src="/images/partners/ALMAZ.png" alt="НПО АЛМАЗ"></a>
     </div>
 
     <center><div class="create-line">
