--- a/disciplines/index.html
+++ b/disciplines/index.html
@@ -22,23 +22,12 @@
       />
     </a>
     <nav class="header-menu">
-      <a href="/" class="header-menu-link">Главная</a>
+      <a href="#" class="header-menu-link">Главная</a>
       <a href="/teachers" class="header-menu-link">Преподаватели</a>
-      <a href="#" class="header-menu-link">Дисциплины</a>
+      <a href="/disciplines" class="header-menu-link">Дисциплины</a>
       <a href="/materials" class="header-menu-link">Материалы</a>
     </nav>
     <div class="lang-contant parent-element">
-      <dotlottie-player
-        class="lang-logo"
-        class="flex-logo-image"
-        src="/icon-json/lang.json"
-        background="transparent"
-        speed="1"
-        style="width: 23px; height: 23px"
-        direction="1"
-        playMode="normal"
-      ></dotlottie-player>
-      <div class="lang-title">Eng</div>
     </div>
   </header>
     <div class="container">
