--- a/disciplines/index.html
+++ b/disciplines/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>disciplines</title>
+    <title>Дисциплины</title>
     <link rel="stylesheet" href="/disciplines.css" />
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
@@ -22,9 +22,9 @@
       />
     </a>
     <nav class="header-menu">
-      <a href="#" class="header-menu-link">Главная</a>
+      <a href="/" class="header-menu-link">Главная</a>
       <a href="/teachers" class="header-menu-link">Преподаватели</a>
-      <a href="/disciplines" class="header-menu-link">Дисциплины</a>
+      <a href="#" class="header-menu-link">Дисциплины</a>
       <a href="/materials" class="header-menu-link">Материалы</a>
     </nav>
     <div class="lang-contant parent-element">
