--- a/teachers/index.html
+++ b/teachers/index.html
@@ -22,8 +22,8 @@
           />
         </a>
         <nav class="header-menu">
-          <a href="#" class="header-menu-link">Главная</a>
-          <a href="/teachers" class="header-menu-link">Преподаватели</a>
+          <a href="/" class="header-menu-link">Главная</a>
+          <a href="#" class="header-menu-link">Преподаватели</a>
           <a href="/disciplines" class="header-menu-link">Дисциплины</a>
           <a href="/materials" class="header-menu-link">Материалы</a>
         </nav>
