--- a/main/index.html
+++ b/main/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Кафедра 311</title>
     <link rel="stylesheet" href="/main.css" />
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+    </style>
     <script src="/scripts/typed.min.js"></script>
     <script
       src="/node_modules/@dotlottie/player-component/dist/dotlottie-player.mjs"
