--- a/main/index.html
+++ b/main/index.html
@@ -41,6 +41,7 @@
       <script src="/scripts/typing_script.js"></script>
       <p class="dop-info">Кафедра 311 станет твоим гидом в новом мире</p>
       <p class="dop-info">информационных технологий.</p>
+      <a href="https://www.youtube.com/watch?v=SzqIsua2kzg&list=LL&index=1&t=56s" class="video_button">Узнать больше</a>
     </div>
     <div class="page-second">
       <div class="content-second">
