--- a/main/index.html
+++ b/main/index.html
@@ -49,26 +49,24 @@
       <div class="content-second">
         <p1 class="headline">Кафедра 311 — это:</p1>
         <div class="flex-container">
-          <div class="flex-element parent-element">
+          <div class="flex-element parent-element flex-element0">
             <dotlottie-player
               class="flex-logo-image"
               src="/icon-json/advantage_1.json"
               background="transparent"
               speed="1"
-              style="width: 3.5vw; height: 4.85vw"
               direction="1"
               playMode="normal"
             ></dotlottie-player>
             <p class="flex-title">Партнеры</p>
             <p class="flex-info">Практика в одной из ведущих компаний.</p>
           </div>
-          <div class="flex-element parent-element">
+          <div class="flex-element parent-element flex-element1">
             <dotlottie-player
               class="flex-logo-image"
               src="/icon-json/advantage_2.json"
               background="transparent"
               speed="1"
-              style="width: 4.85vw; height: 4.8vw"
               direction="1"
               playMode="normal"
             ></dotlottie-player>
@@ -77,39 +75,36 @@
               Получишь прикладные и фундаментальные знания.
             </p>
           </div>
-          <div class="flex-element parent-element">
+          <div class="flex-element parent-element flex-element2">
             <dotlottie-player
               class="flex-logo-image"
               src="/icon-json/advantage_3.json"
               background="transparent"
               speed="1.3"
-              style="width: 5.55vw; height: 4.65vw"
               direction="1"
               playMode="normal"
             ></dotlottie-player>
             <p class="flex-title">Преподаватели</p>
             <p class="flex-info">Преподавательский состав высокого уровня.</p>
           </div>
-          <div class="flex-element parent-element">
+          <div class="flex-element parent-element flex-element3">
             <dotlottie-player
               class="flex-logo-image-bottom"
               src="/icon-json/advantage_4.json"
               background="transparent"
               speed="1"
-              style="width: 3.5vw; height: 3.3vw"
               direction="1"
               playMode="normal"
             ></dotlottie-player>
             <p class="flex-title">Военная кафедра</p>
             <p class="flex-info">Сможете получить звание лейтенанта запаса.</p>
           </div>
-          <div class="flex-element parent-element">
+          <div class="flex-element parent-element flex-element4">
             <dotlottie-player
               class="flex-logo-image-bottom"
               src="/icon-json/advantage_5.json"
               background="transparent"
               speed="1"
-              style="width: 3.8vw; height: 3.05vw"
               direction="1"
               playMode="normal"
             ></dotlottie-player>
