--- a/main/index.html
+++ b/main/index.html
@@ -49,9 +49,9 @@
       <div class="content-second">
         <p1 class="headline">Кафедра 311 — это:</p1>
         <div class="flex-container">
-          <div class="flex-element parent-element flex-element0">
+          <div class="flex-element parent-element">
             <dotlottie-player
-              class="flex-logo-image"
+              class="flex-logo-image flex-element0"
               src="/icon-json/advantage_1.json"
               background="transparent"
               speed="1"
@@ -61,9 +61,9 @@
             <p class="flex-title">Партнеры</p>
             <p class="flex-info">Практика в одной из ведущих компаний.</p>
           </div>
-          <div class="flex-element parent-element flex-element1">
+          <div class="flex-element parent-element">
             <dotlottie-player
-              class="flex-logo-image"
+              class="flex-logo-image flex-element1"
               src="/icon-json/advantage_2.json"
               background="transparent"
               speed="1"
@@ -75,9 +75,9 @@
               Получишь прикладные и фундаментальные знания.
             </p>
           </div>
-          <div class="flex-element parent-element flex-element2">
+          <div class="flex-element parent-element">
             <dotlottie-player
-              class="flex-logo-image"
+              class="flex-logo-image flex-element2"
               src="/icon-json/advantage_3.json"
               background="transparent"
               speed="1.3"
@@ -87,9 +87,9 @@
             <p class="flex-title">Преподаватели</p>
             <p class="flex-info">Преподавательский состав высокого уровня.</p>
           </div>
-          <div class="flex-element parent-element flex-element3">
+          <div class="flex-element parent-element">
             <dotlottie-player
-              class="flex-logo-image-bottom"
+              class="flex-logo-image-bottom flex-element3"
               src="/icon-json/advantage_4.json"
               background="transparent"
               speed="1"
@@ -99,9 +99,9 @@
             <p class="flex-title">Военная кафедра</p>
             <p class="flex-info">Сможете получить звание лейтенанта запаса.</p>
           </div>
-          <div class="flex-element parent-element flex-element4">
+          <div class="flex-element parent-element">
             <dotlottie-player
-              class="flex-logo-image-bottom"
+              class="flex-logo-image-bottom flex-element4"
               src="/icon-json/advantage_5.json"
               background="transparent"
               speed="1"
