--- a/disciplines/index.html
+++ b/disciplines/index.html
@@ -10,26 +10,26 @@
     </style>
 </head>
 <body>
-  <header class="header">
-    <a href="/" class="header-logo">
-      <img
-        class="header-logo-image"
-        src="/images/logo.png"
-        alt="МАИ"
-        width="40"
-        height="40"
-        loading="lazy"
-      />
-    </a>
-    <nav class="header-menu">
-      <a href="/" class="header-menu-link">Главная</a>
-      <a href="/teachers" class="header-menu-link">Преподаватели</a>
-      <a href="#" class="header-menu-link">Дисциплины</a>
-      <a href="/materials" class="header-menu-link">Материалы</a>
-    </nav>
-    <div class="lang-contant parent-element">
-    </div>
-  </header>
+    <header class="header">
+        <a href="/" class="header-logo">
+          <img
+            class="header-logo-image"
+            src="/images/logo.png"
+            alt="МАИ"
+            width="40"
+            height="40"
+            loading="lazy"
+          />
+        </a>
+        <nav class="header-menu">
+          <a href="#" class="header-menu-link">Главная</a>
+          <a href="/teachers" class="header-menu-link">Преподаватели</a>
+          <a href="/disciplines" class="header-menu-link">Дисциплины</a>
+          <a href="/materials" class="header-menu-link">Материалы</a>
+        </nav>
+        <div class="lang-contant parent-element">
+        </div>
+    </header>
     <div class="container">
         <p class="title">Дисциплины</p>
         <div class="content">
