--- a/teachers/index.html
+++ b/teachers/index.html
@@ -22,14 +22,14 @@
           />
         </a>
         <nav class="header-menu">
-          <a href="/" class="header-menu-link">Главная</a>
-          <a href="#" class="header-menu-link">Преподаватели</a>
+          <a href="#" class="header-menu-link">Главная</a>
+          <a href="/teachers" class="header-menu-link">Преподаватели</a>
           <a href="/disciplines" class="header-menu-link">Дисциплины</a>
           <a href="/materials" class="header-menu-link">Материалы</a>
         </nav>
         <div class="lang-contant parent-element">
         </div>
-      </header>
+    </header>
       <div class="teachers">
         <div class="container_teacher">
             <div class="photos_teachers">
