--- a/main/index.html
+++ b/main/index.html
@@ -210,7 +210,7 @@
     <div class="contact-container_big">
         <div class="contact-container_smal">
             <img src="/images/icons/vk.png" alt="Вконтакте" >
-            <p class="text-contact">ссылка</p>
+            <a href="https://vk.com/club2240" class="text-contact">Вконтакте</a>
         </div>
       
         <div class="contact-container_smal">
