--- a/main/index.html
+++ b/main/index.html
@@ -49,7 +49,7 @@
       <div class="content-second">
         <p1 class="headline">Кафедра 311 — это:</p1>
         <div class="flex-container">
-          <a href="#partners" class="flex-element parent-element">
+          <div class="flex-element parent-element">
             <dotlottie-player
               class="flex-logo-image flex-element0"
               src="/icon-json/advantage_1.json"
@@ -196,7 +196,7 @@
 
       </div>
     </div>
-    <p class="title-partner" id="partners">Наши партнёры</p>
+    <p class="title-partner">Наши партнёры</p>
     <div class="partner-container">
       <a href="https://www.roscosmos.ru" class="partner_button" target="_blank"><img src="/images/partners/RosCosmos.png" alt="РосКосмос"></a>
       <a href="https://www.uacrussia.ru/ru/" class="partner_button" target="_blank"><img src="/images/partners/OAK.png" alt="ОАК"></a>
