--- a/main/index.html
+++ b/main/index.html
@@ -163,7 +163,7 @@
     </div>
     <div class="black-container">
       <p class="prof-header">Будующая профессия</p>
-      <div class="prof-containers" id="VerticalContainers">
+      <a href="part" class="prof-containers" id="VerticalContainers">
           <div class="prof-container prof0" >
             <p class="prof-title">Web Developer</p>
             <p class="prof-info">Web-разработчик создает и поддерживает веб-приложения и сайты, используя различные языки программирования и технологии. Он занимается созданием интерактивных пользовательских интерфейсов, оптимизацией веб-сайтов для улучшения производительности и пользовательского опыта, а также работает над безопасностью сайтов.</p>
