--- a/main/index.html
+++ b/main/index.html
@@ -49,7 +49,7 @@
       <div class="content-second">
         <p1 class="headline">Кафедра 311 — это:</p1>
         <div class="flex-container">
-          <div class="flex-element parent-element">
+          <a href="partners" class="flex-element parent-element">
             <dotlottie-player
               class="flex-logo-image flex-element0"
               src="/icon-json/advantage_1.json"
@@ -60,7 +60,7 @@
             ></dotlottie-player>
             <p class="flex-title">Партнеры</p>
             <p class="flex-info">Практика в одной из ведущих компаний.</p>
-          </div>
+          </a>
           <div class="flex-element parent-element">
             <dotlottie-player
               class="flex-logo-image flex-element1"
@@ -163,7 +163,7 @@
     </div>
     <div class="black-container">
       <p class="prof-header">Будующая профессия</p>
-      <a href="part" class="prof-containers" id="VerticalContainers">
+      <div class="prof-containers" id="VerticalContainers">
           <div class="prof-container prof0" >
             <p class="prof-title">Web Developer</p>
             <p class="prof-info">Web-разработчик создает и поддерживает веб-приложения и сайты, используя различные языки программирования и технологии. Он занимается созданием интерактивных пользовательских интерфейсов, оптимизацией веб-сайтов для улучшения производительности и пользовательского опыта, а также работает над безопасностью сайтов.</p>
@@ -196,7 +196,7 @@
 
       </div>
     </div>
-    <p class="title-partner">Наши партнёры</p>
+    <p id="partners" class="title-partner">Наши партнёры</p>
     <div class="partner-container">
       <a href="https://www.roscosmos.ru" class="partner_button" target="_blank"><img src="/images/partners/RosCosmos.png" alt="РосКосмос"></a>
       <a href="https://www.uacrussia.ru/ru/" class="partner_button" target="_blank"><img src="/images/partners/OAK.png" alt="ОАК"></a>
