--- a/main/index.html
+++ b/main/index.html
@@ -49,7 +49,7 @@
       <div class="content-second">
         <p1 class="headline">Кафедра 311 — это:</p1>
         <div class="flex-container">
-          <a href="partners" class="flex-element parent-element">
+          <a href="#partners" class="flex-element parent-element">
             <dotlottie-player
               class="flex-logo-image flex-element0"
               src="/icon-json/advantage_1.json"
@@ -162,7 +162,7 @@
       </div>
     </div>
     <div class="black-container">
-      <p class="prof-header">Будующая профессия</p>
+      <p class="prof-header">Будущая профессия</p>
       <div class="prof-containers" id="VerticalContainers">
           <div class="prof-container prof0" >
             <p class="prof-title">Web Developer</p>
