--- a/main/index.html
+++ b/main/index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <header class="header">
-      <a href="/" class="header-logo">
+      <a href="https://mai.ru" class="header-logo">
         <img
           class="header-logo-image"
           src="/images/logo.png"
@@ -42,7 +42,7 @@
       <p class="dop-info">Кафедра 311 станет твоим гидом в новом мире</p>
       <p class="dop-info">информационных технологий.</p>
       <div class="video_button">
-        <a href="https://www.youtube.com/watch?v=SzqIsua2kzg&list=LL&index=1&t=56s">Узнать больше</a>
+        <a href="/video" target="_blank">Узнать больше</a>
       </div>
     </div>
     <div class="page-second">
@@ -61,7 +61,7 @@
             <p class="flex-title">Партнеры</p>
             <p class="flex-info">Практика в одной из ведущих компаний.</p>
           </a>
-          <div class="flex-element parent-element">
+          <a href="/disciplines" class="flex-element parent-element">
             <dotlottie-player
               class="flex-logo-image flex-element1"
               src="/icon-json/advantage_2.json"
@@ -74,8 +74,8 @@
             <p class="flex-info">
               Получишь прикладные и фундаментальные знания.
             </p>
-          </div>
-          <div class="flex-element parent-element">
+          </a>
+          <a href="/teachers" class="flex-element parent-element">
             <dotlottie-player
               class="flex-logo-image flex-element2"
               src="/icon-json/advantage_3.json"
@@ -86,8 +86,8 @@
             ></dotlottie-player>
             <p class="flex-title">Преподаватели</p>
             <p class="flex-info">Преподавательский состав высокого уровня.</p>
-          </div>
-          <div class="flex-element parent-element">
+          </a>
+          <a href="https://s-mai.ru/voennaya-kafedra/" class="flex-element parent-element">
             <dotlottie-player
               class="flex-logo-image-bottom flex-element3"
               src="/icon-json/advantage_4.json"
@@ -98,8 +98,8 @@
             ></dotlottie-player>
             <p class="flex-title">Военная кафедра</p>
             <p class="flex-info">Сможете получить звание лейтенанта запаса.</p>
-          </div>
-          <div class="flex-element parent-element">
+          </a>
+          <a href="https://files.mai.ru/site/sveden/oop3/Description_%D0%97_2019-20_09.03.03.%D0%913_%D0%9C%D0%90%D0%98_311.pdf" class="flex-element parent-element">
             <dotlottie-player
               class="flex-logo-image-bottom flex-element4"
               src="/icon-json/advantage_5.json"
@@ -112,7 +112,7 @@
             <p class="flex-info">
               Учебный план отвечает современным требованиям индустрии.
             </p>
-          </div>
+          </a>
         </div>
       </div>
     </div>
