--- a/teachers/index.html
+++ b/teachers/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header class="header">
-        <a href="/" class="header-logo">
+        <a href="https://mai.ru" class="header-logo">
           <img
             class="header-logo-image"
             src="/images/logo.png"
