--- a/main/index.html
+++ b/main/index.html
@@ -99,7 +99,7 @@
             <p class="flex-title">Военная кафедра</p>
             <p class="flex-info">Сможете получить звание лейтенанта запаса.</p>
           </a>
-          <a href="https://files.mai.ru/site/sveden/oop3/Description_%D0%97_2019-20_09.03.03.%D0%913_%D0%9C%D0%90%D0%98_311.pdf" class="flex-element parent-element">
+          <a href="https://files.mai.ru/site/sveden/oop3/Annotations_З_2019-20_09.03.03.Б3_МАИ_311.pdf" class="flex-element parent-element">
             <dotlottie-player
               class="flex-logo-image-bottom flex-element4"
               src="/icon-json/advantage_5.json"
