--- a/main/index.html
+++ b/main/index.html
@@ -87,7 +87,7 @@
             <p class="flex-title">Преподаватели</p>
             <p class="flex-info">Преподавательский состав высокого уровня.</p>
           </a>
-          <a href="https://s-mai.ru/voennaya-kafedra/" class="flex-element parent-element">
+          <a href="https://vuc-mai.ru" class="flex-element parent-element">
             <dotlottie-player
               class="flex-logo-image-bottom flex-element3"
               src="/icon-json/advantage_4.json"
