--- a/teachers/index.html
+++ b/teachers/index.html
@@ -422,7 +422,8 @@
                 </div>
             </div>
         </div>
-
+        <!-- Там где мир будет зло -->
+        <!-- Там где мы будет музло -->
         <div class="container_teacher">
             <div class="photos_teachers">
                 <img src="/images/teachers/Hovik.png">
